--- a/src/public/views/home.pug
+++ b/src/public/views/home.pug
@@ -16,12 +16,12 @@ html(lang="en")
                     button Enter Room
             div#call
                 div#myStream
-                    video#myFace(autoplay, playsinline, width="400", height="400")
-                    button#mute Mute
+                    video#myFace(autoplay, playsinline, width="400", height="400" muted)
+                    button#mute Unmute
                     button#camera Turn Camera Off
                     select#cameras
                         option(value="device") Face Camera
-                video#peersFace(autoplay, playsinline, width="400", height="400")
+                video#peersFace(autoplay, playsinline, width="400", height="400" muted)
 
         script(src="/socket.io/socket.io.js")
         script(src="/public/js/app.js")
